# todos

./: .env  docker-compose.yml
client/: Dockerfile  package-lock.json  package.json
client/src/: Todo.svelte
client/src/lib/: functions.ts  types.ts
client/src/routes/: +page.svelte
server/: .env  Cargo.toml  Dockerfile
server/migrations/2023-11-27-182651_todos/: up.sql
server/src/: helpers.rs  main.rs  models.rs  routes.rs  schema.rs  types.rs
